app/(content)/layout.module.css
.main-container {
  flex-grow: 1;
  position: relative;
}

.page-container {
  display: flex;
  flex-direction: column;
  width: 100%;
  gap: 20px;
}

.nav-container {
  padding-top: 100px;
  padding-right: 10%;
  padding-left: 10%;
  position: relative;
  display: flex;
  align-items: end;
  gap: var(--gap-medium);
  width: 100%;
}
.nav-container::after {
  content: '';
  margin: auto;
  position: absolute;
  bottom: -20px;
  left: 0;
  right: 0;
  width: 81%;
  height: 1px;
  background-color: var(--foreground);
}

.nav-header {
  font-size: var(--fs-header);
  font-family: var(--font-inter);
  font-weight: 700;
}

.footer-container {
  border-top: 1px solid var(--foreground);
  padding: 10px;
  position: fixed;
  bottom: 0;
  width: 100%;
  height: fit-content;
  background-color: var(--background);
}

.footer-items {
  padding-right: calc(5% - 35px);
  display: flex;
  gap: 30px;
  justify-content: end;
}
.footer-items > * {
  color: inherit;
  text-decoration: none;
}

